Fixed List styling
MODIFIED>
    Styles.css
         -fixed styling for list to not get broken on window rezise.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -37,7 +37,8 @@ body {
 div.all {
     margin-left: 10%;
     padding: 1px 16px;
-    height: 100%
+    height: 100%;
+    min-width: 1000px;
 }
 p {
     text-align:left;
@@ -95,7 +96,7 @@ ul.items {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 70%;
+    width: 100%;
     background-color: white;
     overflow: auto;
 }
@@ -104,7 +105,8 @@ li.items a {
     font-family: verdana;
     text-decoration: none;
     display: inline-block;
-    padding: 10px 20px;
+    padding: 10px;
+    margin-left: 0px;
 }
 li.items {
     text-align: left;
